# OpenBebop

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  DCO.md  Dockerfile.sovereign  GOVERNANCE.md  LICENSE  RE-Loop-report.json  README.md  README.uk.md  SECURITY.md  SUPPORT.md  bebop-lounge.html  bebop.ts  bebop2-test-link  config.sovereign.json  deny.toml  docker-compose.sovereign.yml  package-lock.json  package.json  re-loop.ts
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  openwiki-update.yml  release.yml  wiki-sync.yml
.review/: staged.json
archive/: bebop.ts
archive/bebop-ts-legacy/: doctrine.test.ts  field.test.ts  theme.test.ts  voice.test.ts
archive/bebop-ts-src/: backend.ts  bebop_core.wasm  conductor.test.ts  core-wasi.test.ts  core-wasm.test.ts  core-wasm.ts  field.ts  governor.ts  guard.ts  harvest.test.ts  harvest.ts  hooks.ts  loop.react.test.ts  optional-deps.d.ts  outfit.ts  speculate.test.ts  speculate.ts  theme.ts  validate.test.ts  validate.ts  voice.ts
archive/bebop-ts-src/integration/zkvm/guest/: Cargo.toml
archive/bebop-ts-src/integration/zkvm/guest/src/: main.rs
attic/core-legacy/: Cargo.toml  build-wasi.sh  build.sh
bebop2/: ARCHITECTURE.md  README.md  RED-TEAM-REVIEW-2026-07-12.md  REMEDIATION-BLUEPRINT-2026-07-12.md
bebop2/bench/: BENCH_RESULTS.md  Cargo.toml
bebop2/bench/benches/: crypto.rs
bebop2/bench/src/: lib.rs
bebop2/config/: KEY-CEREMONY.md  genesis.example.txt  hub-policy.example.txt
bebop2/core/: Cargo.toml
bebop2/core/.cargo/: config.toml
bebop2/core/benches/: verify_lane.rs
bebop2/core/examples/: bench_eigensolve.rs
bebop2/core/kat/: README.md
bebop2/core/scripts/: check-wasm32.sh
bebop2/core/src/: active.rs  aead.rs  algebra.rs  anti_entropy.rs  at_rest.rs  chebyshev.rs  deliberate.rs  dmd.rs  energy.rs  event_log.rs  fft.rs  field.rs  hash.rs  kalman.rs  kdf.rs  keccak_x4_avx2.rs  key_v_verifier.rs  lib.rs  linalg.rs  lyapunov.rs  micrograd.rs  pq_dsa.rs  pq_kem.rs  resonator.rs  rng.rs  self_mod.rs  self_mod_loop.rs  sign.rs  speedometer.rs  vsa.rs  x25519.rs
bebop2/core/src/kat/: vectors.rs
bebop2/core/src/pq_dsa/: acvp_tests.rs
bebop2/core/tests/: eig_parity.rs  eigensolver_parity.rs
bebop2/delivery-domain/: Cargo.toml
bebop2/delivery-domain/benches/: hub_ring.rs
bebop2/delivery-domain/src/: finalization.rs  hub_ring.rs  intake.rs  lib.rs  pod.rs
bebop2/mesh-node/: Cargo.toml
bebop2/mesh-node/src/: boot.rs  breach.rs  dod.rs  hot_reload.rs  hub_policy.rs  kill_switch.rs  lib.rs  listener_reconcile.rs  node.rs
bebop2/mesh-node/tests/: breach_integration.rs
bebop2/proto-cap/: Cargo.toml
bebop2/proto-cap/benches/: proto_cap_benches.rs
bebop2/proto-cap/src/: capability.rs  claim_machine.rs  error.rs  event_dict.rs  facade.rs  hybrid_gate.rs  kv_signer.rs  lib.rs  matcher.rs  node_id.rs  port.rs  redline.rs  revocation.rs  roster.rs  scope.rs  signed_frame.rs
bebop2/proto-cap/tests/: bayes_calibration.rs
bebop2/proto-crypto/: Cargo.toml
bebop2/proto-crypto/src/: constant_time.rs  error.rs  fips_regen.rs  ladder.rs  lib.rs  pq_kem.rs  wycheproof.rs
bebop2/proto-wire/: Cargo.toml
bebop2/proto-wire/benches/: merkle_root.rs  proto_wire_benches.rs
bebop2/proto-wire/src/: bpv7.rs  discovery.rs  envelope.rs  error.rs  frame_kind.rs  framing.rs  handshake.rs  iroh_transport.rs  lib.rs  stdio_transport.rs  sync_pull.rs  transport_policy.rs  wire_codec.rs  wss_transport.rs
bebop2/proto-wire/tests/: differential_content_id.rs  mesh_sync_integration.rs
ci/crdt-fence/: Cargo.toml
ci/crdt-fence/src/: lib.rs  main.rs
crates/bebop/: Cargo.toml  README.md
crates/bebop/examples/: helm-svg.rs  launch-svg.rs  relational_vs_euclidean.rs  tree_vs_field_telemetry.rs
crates/bebop/src/: active_inference.rs  agent_loop.rs  agent_profile.rs  agentic_git.rs  algebra.rs  analytics.rs  audit.rs  changes.rs  cli.rs  coherence.rs  collections.rs  copilot.rs  cost_estimate.rs  customize.rs  destructive.rs  doc_claims.rs  drift.rs  error_patterns.rs  execution.rs  field.rs  field_physics.rs  gender.rs  geometry_field.rs  governor.rs  guard.rs  intent.rs  knowledge.rs  lanes.rs  launch.rs  ledger.rs  lib.rs  loop_runtime.rs  main.rs  matcher.rs  mcp.rs  memory.rs  mission.rs  multipilot.rs  orthogonality.rs  outfit.rs  (+21 more)
crates/core/: Cargo.toml  build-wasi.sh
crates/core/src/: lib.rs
docs/: ARCHITECTURE.md  GORTAI-ANALOGY.md  README.md  RED-LINE-LEDGER.md  RULES.md  VERIFICATION-MATRIX.md  architecture.md  commands.md  getting-started.md
docs/design/: BEBOP-AGENT-PLAN-2026-07-12.md  (+49 more)
rust-core/: Cargo.toml  bebop_core.wasm
scripts/: build-unikernel.sh  check-empty-imports.sh  ci-budgeted-issuance.sh  ci-claim-live-test.sh  ci-core-no-ccrypto.sh  ci-crdt-fence.sh  ci-kernel-fence.sh  ci-no-courier-scoring.sh  ci-no-duplicate-eventlog.sh  ci-no-placeholder-synctopic.sh  ci-no-race-alloc.sh  ci-no-redline-gate.sh  ci-no-serde-json-wire.sh  ci-no-ungated-keygen.sh  ci-supply-chain.sh  core-reverse-engineering-loop.sh  field-sim-report.mjs  guardrail-falsifiable-proof.mjs  i18n-translate.mjs  invariant-advisor-gate.mjs  law-hooks.mjs  logic-gate.mjs  notify-telegram.mjs  record-feature.sh  send-cli-design.mjs  test-no-ccrypto-core.sh  test-no-courier-scoring.sh  test-no-duplicate-eventlog.sh  test-no-placeholder-synctopic.sh  test-no-redline-gate.sh  test-no-serde-json-wire.sh  test-no-ungated-keygen.sh  verify-doc-claims.mjs  verify-empty-imports.sh
src/: auth.test.ts  auth.ts  consciousness.test.ts  consciousness.ts  copilot.test.ts  copilot.ts  core-wasi.ts  core.test.ts  dispatch-cli.test.ts  doctrine.test.ts  free-llm.ts  governor.test.ts  governor.ts  guard.test.ts  guard.ts  harvest.test.ts  hooks.test.ts  init.ts  kernel.ts  knowledge.test.ts  knowledge.ts  loop.test.ts  loop.ts  mcp.test.ts  mcp.ts  memory.ts  profile.ts  settings.test.ts  settings.ts  sync-server.ts
(+169 files in other folders)
