[package]
name = "bebop-delivery-domain"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Layer-B decider-core adapter: re-exports the dowiz-kernel order-machine decide/fold Law for bebop2. Default build is dependency-free and offline-clean; `kernel-rlib` links the real kernel."

# ── Features ──
# `kernel-rlib` (default OFF) links the REAL `dowiz-kernel` as a pure-Rust rlib.
# It pulls the kernel with `default-features = false, features = ["std"]` so the
# WASM/serde surface (wasm-bindgen / serde / serde_json / serde_yaml) is EXCLUDED
# from this crate's native graph. The default (feature-less) build stays
# dependency-free and offline-clean per MESH-01 R-MESH01a.
[features]
default = []
kernel-rlib = ["dep:dowiz-kernel", "dep:bebop-proto-cap"]

[dependencies]
# Path-link the REAL kernel. `default-features = false` + `features = ["std"]`
# disables the kernel's `wasm` feature → NO wasm-bindgen / serde_json /
# serde_yaml in this crate's graph. The kernel's order/money core is
# feature-independent and byte-identical regardless of how it is linked.
# (Path is `../../../dowiz/kernel` relative to this file: bebop2/delivery-domain
# → bebop2 → bebop-repo → /root; kernel lives at /root/dowiz/kernel.)
dowiz-kernel = { path = "../../../dowiz/kernel", default-features = false, features = ["std"], optional = true }
# WIRE gate (HybridGate + SignedFrame + AnchorRoster). The KernelFacade compiles
# the WIRE→LAW→MONEY chain; it is gated on `kernel-rlib` so the default build
# stays dependency-free (MESH-01/02). `proto-cap` is pure-Rust, no transport.
bebop-proto-cap = { path = "../proto-cap", optional = true }

[dev-dependencies]
# Real keygen for building signed frames in the MESH-02 RED test (no crypto dep leak).
bebop2-core = { path = "../core", version = "0.1.0", default-features = false, features = ["std", "test_keygen"] }
