[package]
name = "bebop-delivery-domain"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Layer-B decider-core adapter: re-exports the dowiz-kernel order-machine decide/fold Law for bebop2. Default build is dependency-free and offline-clean; `kernel-rlib` links the real kernel."

# ── Features ──
# `kernel-rlib` (default OFF) links the REAL `dowiz-kernel` as a pure-Rust rlib.
# It pulls the kernel with `default-features = false, features = ["std"]` so the
# WASM/serde surface (wasm-bindgen / serde / serde_json / serde_yaml) is EXCLUDED
# from this crate's native graph. The default (feature-less) build stays
# dependency-free and offline-clean per MESH-01 R-MESH01a.
[features]
default = []
# P76 (A2): the split-brain / double-finalization + hub-ring ownership tests are
# SAFETY-CRITICAL and must run under DEFAULT `cargo test` (the audit found them
# gated behind `kernel-rlib`, default-OFF, so the default run was green while
# the falsifiable RED/GREEN tests were silently excluded). `bebop2-core` (PQ
# crypto) and `bebop-proto-cap` (capability gate) are pure-Rust and
# offline-clean, so we make them ALWAYS available — that lets finalization.rs +
# hub_ring.rs types compile and their `#[cfg(test)]` run by default. `dowiz-kernel`
# (the real order-machine Law) stays OPT-IN under `kernel-rlib`; intake.rs's
# full-lifecycle tests genuinely need it, so those remain gated + a CI matrix
# leg (`cargo test -p bebop-delivery-domain --features kernel-rlib`) runs them.
kernel-rlib = ["dep:dowiz-kernel", "dep:bebop-mesh-node"]

[dependencies]
# Path-link the REAL kernel. `default-features = false` + `features = ["std"]`
# disables the kernel's `wasm` feature → NO wasm-bindgen / serde_json /
# serde_yaml in this crate's graph. The kernel's order/money core is
# feature-independent and byte-identical regardless of how it is linked.
# (Path is `../../../dowiz/kernel` relative to this file: bebop2/delivery-domain
# → bebop2 → bebop-repo → /root; kernel lives at /root/dowiz/kernel.)
dowiz-kernel = { path = "../../../dowiz/kernel", version = "0.1.0", default-features = false, features = ["std"], optional = true }
# WIRE gate (HybridGate + SignedFrame + AnchorRoster) — ALWAYS available
# (pure-Rust, no transport). Needed so finalization.rs / hub_ring.rs P76 tests
# run under default `cargo test`; the KernelFacade WIRE→LAW→MONEY chain that
# also uses it remains gated on `kernel-rlib`.
bebop-proto-cap = { path = "../proto-cap", version = "0.1.0" }
# Mesh node runtime (P13 spine): the Definition-of-Done gate `DodGate` the
# receiver runs on every carried event. Gated on `kernel-rlib` so the default
# build stays dependency-free. `mesh-node`'s transport deps (tokio/rustls/quinn)
# are NOT used by the spine — only its pure `dod` module's gate type.
bebop-mesh-node = { path = "../mesh-node", version = "0.1.0", optional = true }
# Core crypto (Ed25519 + ML-DSA-65 + SHA3) — ALWAYS available (pure-Rust,
# offline-clean). Needed by finalization.rs (F46 hash-chain) + hub_ring.rs (HRW
# keygen) so their P76 safety-critical tests run under default `cargo test`.
bebop2-core = { path = "../core", version = "0.1.0", default-features = false, features = ["std", "test_keygen"] }

[dev-dependencies]
# Real keygen for building signed frames in the MESH-02 RED test (no crypto dep leak).
bebop2-core = { path = "../core", version = "0.1.0", default-features = false, features = ["std", "test_keygen"] }
# Benchmarking harness for the hot paths (P78 B4 — hub_ring ranked/owner_hub).
# Convention: `<group>/<n>` bench-id owned by P75 (cite, don't redefine).
criterion = "0.5"

[[bench]]
name = "hub_ring"
harness = false
required-features = ["kernel-rlib"]
