[package]
name = "bebop-proto-cap"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "A (authorization) — bebop2 protocol library line. Per-frame signed capability replacing bearer JWT; hybrid gate in code."

[dependencies]
# Real from-scratch PQ core (Ed25519 classical leg is wired; ML-DSA-65 PQ leg is a
# marked TODO pending the pack/unpack API — see signed_frame.rs / hybrid_gate.rs).
bebop2-core = { path = "../core", default-features = false, features = ["std"] }

# `serde` is the ONLY third-party dep, used purely to canonicalize the capability
# struct for signing (no externally-tagged/envelope fields that could vary by RUSTC
# version in a way that breaks cross-version verification). Reachable offline.
serde = { version = "1", features = ["derive"] }
# JSON canonicalization of capabilities / frames (deterministic field order).
serde_json = "1"

[dev-dependencies]
# none.
