[package]
name = "bebop-core"
version = "0.1.0"
edition = "2021"
description = "Bebop's self-contained deterministic guard kernel + retriever (WASM, zero deps at runtime)"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
