[package]
name = "zkvm-guest"
version = "0.1.0"
edition = "2021"

# RISC Zero guest crate. This is the deterministic `decide()` equivalent that runs
# inside the zkVM and commits its output to the receipt JOURNAL.
#
# Build (requires the RISC Zero toolchain from `rzup install`):
#   cd guest && cargo build --target riscv32im-risc0-zkvm-elF
# A host-side methods crate would then call risc0_zkvm::Prover to produce a receipt.

[dependencies]
risc0-zkvm = { version = "1.1", default-features = false, features = ["std"] }

[profile.release]
debug = 1
